# microsoft-excel-replica-v4-bsmqvm

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
documentation/: Software Requirements Specifications (SRS).md  Technical Specifications.md
infrastructure/ansible/: inventory.ini  playbook.yml
infrastructure/arm-templates/: parameters.json  template.json
infrastructure/cloudformation/: parameters.json  template.yaml
infrastructure/docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml
infrastructure/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
infrastructure/scripts/: backup.sh  deploy.sh  monitoring-setup.sh  rollback.sh
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
src/add-in-framework/: AddInManager.cpp  AddInManager.h  CMakeLists.txt  README.md
src/add-in-framework/api/: ExcelDataAccess.cpp  ExcelDataAccess.h  ExcelEventHandler.cpp  ExcelEventHandler.h  ExcelUIAccess.cpp  ExcelUIAccess.h
src/add-in-framework/com/: COMAddInWrapper.cpp  COMAddInWrapper.h
src/add-in-framework/discovery/: AddInDiscovery.cpp  AddInDiscovery.h
src/add-in-framework/interfaces/: IAddIn.h  IAddInHost.h  IExcelInterop.h
src/add-in-framework/marketplace/: MarketplaceIntegration.cpp  MarketplaceIntegration.h
src/add-in-framework/office/: OfficeAddInHost.cpp  OfficeAddInHost.h  OfficeAddInManifest.cpp  OfficeAddInManifest.h
src/add-in-framework/security/: AddInSandbox.cpp  AddInSandbox.h  PermissionManager.cpp  PermissionManager.h
src/add-in-framework/tests/: AddInDiscoveryTests.cpp  AddInManagerTests.cpp  AddInSandboxTests.cpp  COMAddInWrapperTests.cpp  ExcelDataAccessTests.cpp  OfficeAddInHostTests.cpp  VersionManagerTests.cpp  XLLAddInWrapperTests.cpp
src/add-in-framework/utils/: AddInLogger.cpp  AddInLogger.h  ErrorHandler.cpp  ErrorHandler.h
src/add-in-framework/versioning/: VersionManager.cpp  VersionManager.h
src/add-in-framework/xll/: XLLAddInWrapper.cpp  XLLAddInWrapper.h
src/backend-api/: .env.example  README.md  app.ts  package.json  server.ts  tsconfig.json
src/calculation-engine/: CMakeLists.txt  CalculationEngine.cpp  CalculationEngine.h  README.md
src/calculation-engine/ArrayFormulas/: ArrayFormulaHandler.cpp  ArrayFormulaHandler.h
src/calculation-engine/Caching/: FormulaCache.cpp  FormulaCache.h
src/calculation-engine/CalculationChain/: CalculationChain.cpp  CalculationChain.h  DependencyGraph.cpp  DependencyGraph.h
src/calculation-engine/DynamicArrays/: DynamicArrayHandler.cpp  DynamicArrayHandler.h
src/calculation-engine/ErrorHandling/: CalculationErrors.cpp  CalculationErrors.h
src/calculation-engine/FormulaParser/: FormulaParser.cpp  FormulaParser.h  TokenizerUtils.cpp  TokenizerUtils.h
src/calculation-engine/FunctionLibrary/: DateTimeFunctions.cpp  DateTimeFunctions.h  FinancialFunctions.cpp  FinancialFunctions.h  LogicalFunctions.cpp  LogicalFunctions.h  LookupFunctions.cpp  LookupFunctions.h  MathFunctions.cpp  MathFunctions.h  StatisticalFunctions.cpp  StatisticalFunctions.h  TextFunctions.cpp  TextFunctions.h
src/calculation-engine/Interfaces/: ICalculationChain.h  IFormulaParser.h  IFunctionLibrary.h
src/calculation-engine/Multithreading/: ParallelCalculation.cpp  ParallelCalculation.h
src/calculation-engine/Optimization/: CalculationOptimizer.cpp  CalculationOptimizer.h
src/calculation-engine/Tests/IntegrationTests/: CalculationEngineIntegrationTests.cpp
src/calculation-engine/Tests/UnitTests/: ArrayFormulaTests.cpp  CalculationChainTests.cpp  DynamicArrayTests.cpp  FormulaParserTests.cpp  FunctionLibraryTests.cpp
src/charting-engine/: README.md  index.ts  package.json  tsconfig.json
src/collaboration-services/: README.md  app.ts  package.json  server.ts  tsconfig.json
src/core-engine/: CMakeLists.txt  CoreEngine.cpp  CoreEngine.h  README.md
src/core-engine/DataStructures/: Cell.cpp  Cell.h  Range.cpp  Range.h  Workbook.cpp  Workbook.h  Worksheet.cpp  Worksheet.h
src/core-engine/FileIO/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
src/core-engine/Interfaces/: ICalculationEngine.h  IChartingEngine.h  ICollaborationService.h  IDataAnalysisEngine.h  ISecurityManager.h
src/core-engine/Memory/: MemoryManager.cpp  MemoryManager.h
src/core-engine/Performance/: Profiler.cpp  Profiler.h
src/core-engine/Utils/: ErrorHandling.cpp  ErrorHandling.h  Logging.cpp  Logging.h
src/data-access/: AzureSqlConnector.cs  CacheManager.cs  CloudDataSource.cs  ConnectionStringManager.cs  CosmosDbConnector.cs  DataAccessConfiguration.cs  (+19 more)
src/data-analysis-engine/: CMakeLists.txt  DataAnalysisEngine.cpp  DataAnalysisEngine.h  README.md
src/data-analysis-engine/DataModel/: DataModelManager.cpp  DataModelManager.h
src/data-analysis-engine/Filtering/: DataFilter.cpp  DataFilter.h
src/data-analysis-engine/Forecasting/: RegressionAnalysis.cpp  RegressionAnalysis.h  TimeSeries.cpp  TimeSeries.h
src/data-analysis-engine/Interfaces/: IDataAnalysisEngine.h
src/data-analysis-engine/MachineLearning/: MLIntegration.cpp  MLIntegration.h
src/data-analysis-engine/Optimization/: AnalysisOptimizer.cpp  AnalysisOptimizer.h
src/data-analysis-engine/PivotTables/: PivotTableGenerator.cpp  PivotTableGenerator.h
src/data-analysis-engine/PowerPivot/: PowerPivotEngine.cpp  PowerPivotEngine.h
src/data-analysis-engine/Sorting/: DataSorter.cpp  DataSorter.h
src/data-analysis-engine/Statistics/: DescriptiveStatistics.cpp  DescriptiveStatistics.h  InferentialStatistics.cpp  InferentialStatistics.h
src/data-analysis-engine/Tests/IntegrationTests/: DataAnalysisEngineIntegrationTests.cpp
src/data-analysis-engine/Tests/UnitTests/: FilteringTests.cpp  ForecastingTests.cpp  MLIntegrationTests.cpp  PivotTableTests.cpp  SortingTests.cpp  StatisticsTests.cpp  WhatIfAnalysisTests.cpp
src/data-analysis-engine/Utils/: DataAnalysisUtils.cpp  DataAnalysisUtils.h
src/data-analysis-engine/WhatIfAnalysis/: GoalSeek.cpp  GoalSeek.h  Solver.cpp  Solver.h
(+428 files in other folders)
